RESOLVED FIXED110943
Web Inspector: Native Memory Instrumentation: do not visit raw pointers by default.
https://bugs.webkit.org/show_bug.cgi?id=110943
Summary Web Inspector: Native Memory Instrumentation: do not visit raw pointers by de...
Ilya Tikhonovsky
Reported 2013-02-26 21:56:09 PST
Unfortunately in many cases raw pointers may point to an object that has been deleted. There is no working solution to solve this problem in general. It could be solved only on case by case basis. I'll recheck the biggest memory consumers after that patch.
Attachments
Patch (21.38 KB, patch)
2013-02-26 21:59 PST, Ilya Tikhonovsky
no flags
Patch (24.28 KB, patch)
2013-03-01 07:00 PST, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2013-02-26 21:59:31 PST
Build Bot
Comment 2 2013-02-26 23:52:35 PST
Comment on attachment 190440 [details] Patch Attachment 190440 [details] did not pass mac-ews (mac): Output: http://webkit-commit-queue.appspot.com/results/16764042 New failing tests: inspector/profiler/memory-instrumentation-cached-images.html
Build Bot
Comment 3 2013-02-27 01:05:26 PST
Comment on attachment 190440 [details] Patch Attachment 190440 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/16775652 New failing tests: inspector/profiler/memory-instrumentation-cached-images.html
WebKit Review Bot
Comment 4 2013-02-27 01:54:48 PST
Comment on attachment 190440 [details] Patch Attachment 190440 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/16789077 New failing tests: inspector/profiler/memory-instrumentation-canvas.html inspector/profiler/memory-instrumentation-cached-images.html
WebKit Review Bot
Comment 5 2013-02-27 03:10:14 PST
Comment on attachment 190440 [details] Patch Attachment 190440 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/16775720 New failing tests: inspector/profiler/memory-instrumentation-canvas.html inspector/profiler/memory-instrumentation-cached-images.html
Ilya Tikhonovsky
Comment 6 2013-03-01 07:00:56 PST
Yury Semikhatsky
Comment 7 2013-03-01 08:11:14 PST
Comment on attachment 190962 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=190962&action=review How much information do we lose by following only smart pointers? > Source/WTF/wtf/MemoryInstrumentation.h:51 > + RetainedMember, RetainingPtrMember
Ilya Tikhonovsky
Comment 8 2013-03-01 21:25:22 PST
Note You need to log in before you can comment on or make changes to this bug.